--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "firebase": "^10.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.5",
